feat: add modules

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -2,53 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "9591f5bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/ono/otus/mlops/organization-source-code-lesson'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "notebook_path = str(locals()[\"_dh\"][0])\n",
-    "os.chdir(os.path.join(notebook_path, \"..\"))\n",
-    "os.getcwd()"
+    "from src.mathematics import sum_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3beb4906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_numbers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "id": "8acceb9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the numbers is: 15\n"
+      "The sum of the numbers is: 16\n"
      ]
     }
    ],
    "source": [
-    "from src.mathematics import sum_numbers\n",
-    "\n",
     "result = sum_numbers([1, 2, 3, 4, 5])\n",
     "print(f\"The sum of the numbers is: {result}\")"
    ]
@@ -56,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8019afc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -81,5 +68,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
